--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1436,3 +1436,8 @@ TENANT_ISOLATED_TASK_CONCURRENCY=1
 
 # The API key of amplitude
 AMPLITUDE_API_KEY=
+
+# Sandbox expired records clean configuration
+SANDBOX_EXPIRED_RECORDS_CLEAN_GRACEFUL_PERIOD=21
+SANDBOX_EXPIRED_RECORDS_CLEAN_BATCH_SIZE=1000
+SANDBOX_EXPIRED_RECORDS_RETENTION_DAYS=30
