--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1480,3 +1480,8 @@ ANNOTATION_IMPORT_MAX_CONCURRENT=5
 
 # The API key of amplitude
 AMPLITUDE_API_KEY=
+
+# Sandbox expired records clean configuration
+SANDBOX_EXPIRED_RECORDS_CLEAN_GRACEFUL_PERIOD=21
+SANDBOX_EXPIRED_RECORDS_CLEAN_BATCH_SIZE=1000
+SANDBOX_EXPIRED_RECORDS_RETENTION_DAYS=30
