--- a/web/package.json
+++ b/web/package.json
@@ -200,6 +200,7 @@
     "eslint-plugin-tailwindcss": "^3.18.2",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "istanbul-lib-coverage": "^3.2.2",
     "jest": "^29.7.0",
     "jsdom-testing-mocks": "^1.16.0",
     "knip": "^5.66.1",
