test: adjust Jest worker configuration for improved performance
- Increased the maximum number of workers for Jest to utilize available resources more effectively during test execution.

--- a/.github/workflows/web-tests.yml
+++ b/.github/workflows/web-tests.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           pnpm exec jest \
             --ci \
-            --maxWorkers=2 \
+            --maxWorkers=100% \
             --coverage \
             --passWithNoTests
 
