--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -127,6 +127,9 @@ api/migrations/ @snakevash @laipz8200 @MRZHUH
 # Frontend
 web/ @iamjoel
 
+# Frontend - Web Tests
+.github/workflows/web-tests.yml @iamjoel
+
 # Frontend - App - Orchestration
 web/app/components/workflow/ @iamjoel @zxhlyh
 web/app/components/workflow-app/ @iamjoel @zxhlyh
