--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -124,6 +124,9 @@ api/controllers/web/feature.py @GarfieldDai @GareArc
 # Backend - Database Migrations
 api/migrations/ @snakevash @laipz8200 @MRZHUH
 
+# Backend - Vector DB Middleware
+api/configs/middleware/vdb/* @JohnJyong
+
 # Frontend
 web/ @iamjoel
 
@@ -201,6 +204,7 @@ web/app/components/plugins/marketplace/ @iamjoel @Yessenia-d
 web/app/signin/ @douxc @iamjoel
 web/app/signup/ @douxc @iamjoel
 web/app/reset-password/ @douxc @iamjoel
+
 web/app/install/ @douxc @iamjoel
 web/app/init/ @douxc @iamjoel
 web/app/forgot-password/ @douxc @iamjoel
@@ -241,3 +245,6 @@ web/app/education-apply/ @iamjoel @zxhlyh
 
 # Frontend - Workspace
 web/app/components/header/account-dropdown/workplace-selector/ @iamjoel @zxhlyh
+
+# Docker
+docker/* @laipz8200
