--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "json-repair>=0.41.1",
     "langfuse~=2.51.3",
     "langsmith~=0.1.77",
+    "langdetect~=1.0.9",
     "markdown~=3.5.1",
     "mlflow-skinny>=3.0.0",
     "numpy~=1.26.4",
