--- a/web/package.json
+++ b/web/package.json
@@ -24,11 +24,10 @@
     "build": "next build",
     "build:docker": "next build && node scripts/optimize-standalone.js",
     "start": "node ./scripts/copy-and-start.mjs",
-    "lint:oxlint": "oxlint --config .oxlintrc.json .",
-    "lint": "pnpm run lint:oxlint && eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache",
-    "lint:fix": "pnpm run lint:oxlint && eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache --fix",
-    "lint:quiet": "pnpm run lint:oxlint && eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache --quiet",
-    "lint:complexity": "pnpm run lint:oxlint && eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache --rule 'complexity: [error, {max: 15}]' --quiet",
+    "lint": "eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache",
+    "lint:fix": "eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache --fix",
+    "lint:quiet": "eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache --quiet",
+    "lint:complexity": "eslint --cache --cache-location node_modules/.cache/eslint/.eslint-cache --rule 'complexity: [error, {max: 15}]' --quiet",
     "type-check": "tsc --noEmit",
     "type-check:tsgo": "tsgo --noEmit",
     "prepare": "cd ../ && node -e \"if (process.env.NODE_ENV !== 'production'){process.exit(1)} \" || husky ./web/.husky",
@@ -193,7 +192,6 @@
     "code-inspector-plugin": "1.2.9",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.2",
-    "eslint-plugin-oxlint": "^1.34.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
     "eslint-plugin-sonarjs": "^3.0.5",
@@ -209,7 +207,6 @@
     "lodash": "^4.17.21",
     "magicast": "^0.3.5",
     "nock": "^14.0.10",
-    "oxlint": "^1.31.0",
     "postcss": "^8.5.6",
     "react-scan": "^0.4.3",
     "sass": "^1.93.2",
@@ -235,13 +232,7 @@
     "brace-expansion": "~2.0"
   },
   "lint-staged": {
-    "**/*.js?(x)": [
-      "eslint --fix"
-    ],
-    "**/*.ts?(x)": [
-      "oxlint --config .oxlintrc.json",
-      "eslint --fix"
-    ]
+    "*": "eslint --fix"
   },
   "pnpm": {
     "overrides": {
