--- a/sdks/nodejs-client/package.json
+++ b/sdks/nodejs-client/package.json
@@ -2,9 +2,15 @@
   "name": "dify-client",
   "version": "2.3.2",
   "description": "This is the Node.js SDK for the Dify.AI API, which allows you to easily integrate Dify.AI into your Node.js applications.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
-  "types":"index.d.ts",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "keywords": [
     "Dify",
     "Dify.AI",
@@ -16,7 +22,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "build": "tsc -p tsconfig.json",
+    "test": "npm run build --silent && jest"
   },
   "dependencies": {
     "axios": "^1.3.5"
@@ -24,7 +31,9 @@
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
+    "@types/node": "^20.11.30",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "typescript": "^5.4.5"
   }
 }
