--- a/sdks/nodejs-client/package.json
+++ b/sdks/nodejs-client/package.json
@@ -23,17 +23,21 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "test": "npm run build --silent && jest"
+    "lint": "eslint \"src/**/*.ts\" \"index.js\" \"index.test.js\"",
+    "lint:fix": "npm run lint -- --fix",
+    "type-check": "tsc -p tsconfig.json --noEmit",
+    "test": "vitest run"
   },
   "dependencies": {
     "axios": "^1.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/preset-env": "^7.21.5",
     "@types/node": "^20.11.30",
-    "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "typescript": "^5.4.5"
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "@eslint/js": "^9.2.0",
+    "eslint": "^9.2.0",
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.0"
   }
 }
