--- a/sdks/nodejs-client/package.json
+++ b/sdks/nodejs-client/package.json
@@ -26,7 +26,9 @@
     "lint": "eslint \"src/**/*.ts\" \"index.js\" \"index.test.js\"",
     "lint:fix": "npm run lint -- --fix",
     "type-check": "tsc -p tsconfig.json --noEmit",
-    "test": "vitest run"
+    "test": "vitest run",
+    "publish:check": "./scripts/publish.sh --dry-run",
+    "publish:npm": "./scripts/publish.sh"
   },
   "dependencies": {
     "axios": "^1.3.5"
