refactor: move index.test.js to src directory for consistency
- Move index.test.js to src/index.test.js to match other test files
- Update import path from "." to "./index"
- Update lint script in package.json

--- a/sdks/nodejs-client/package.json
+++ b/sdks/nodejs-client/package.json
@@ -42,7 +42,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.json && node scripts/ensure-js-extensions.mjs",
-    "lint": "eslint \"src/**/*.ts\" \"index.test.js\"",
+    "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "type-check": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
