fix(nodejs-sdk): fix contributors format and add LICENSE file
- Fix contributors field format (remove extra angle brackets)
- Add MIT LICENSE file for npm package
- Include LICENSE in published files

--- a/sdks/nodejs-client/package.json
+++ b/sdks/nodejs-client/package.json
@@ -16,7 +16,8 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "keywords": [
     "Dify",
@@ -28,7 +29,7 @@
   ],
   "author": "Joel",
   "contributors": [
-    "<crazywoola> <<427733928@qq.com>> (https://github.com/crazywoola)"
+    "crazywoola <427733928@qq.com> (https://github.com/crazywoola)"
   ],
   "repository": {
     "type": "git",
