fix(nodejs-sdk): update author to LangGenius and add contributors

--- a/sdks/nodejs-client/package.json
+++ b/sdks/nodejs-client/package.json
@@ -27,8 +27,10 @@
     "SDK",
     "API"
   ],
-  "author": "Joel",
+  "author": "LangGenius",
   "contributors": [
+    "Joel <iamjoel007@gmail.com> (https://github.com/iamjoel)",
+    "lyzno1 <yuanyouhuilyz@gmail.com> (https://github.com/lyzno1)",
     "crazywoola <427733928@qq.com> (https://github.com/crazywoola)"
   ],
   "repository": {
