--- a/web/package.json
+++ b/web/package.json
@@ -33,8 +33,8 @@
     "prepare": "cd ../ && node -e \"if (process.env.NODE_ENV !== 'production'){process.exit(1)} \" || husky ./web/.husky",
     "gen-icons": "node ./app/components/base/icons/script.mjs",
     "uglify-embed": "node ./bin/uglify-embed",
-    "check-i18n": "node ./i18n-config/check-i18n.js",
-    "auto-gen-i18n": "node ./i18n-config/auto-gen-i18n.js",
+    "check-i18n": "tsx ./i18n-config/check-i18n.js",
+    "auto-gen-i18n": "tsx ./i18n-config/auto-gen-i18n.js",
     "test": "vitest run",
     "test:watch": "vitest --watch",
     "analyze-component": "node testing/analyze-component.js",
@@ -209,7 +209,7 @@
     "sass": "^1.93.2",
     "storybook": "9.1.17",
     "tailwindcss": "^3.4.18",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "uglify-js": "^3.19.3",
     "vite": "^7.3.0",
