Set user to root for API and worker services
Fix for https://github.com/langgenius/dify/issues/29173#issuecomment-3670460899

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -693,6 +693,7 @@ services:
   # API service
   api:
     image: langgenius/dify-api:1.11.1
+    user: root
     restart: always
     environment:
       # Use the shared environment variables.
@@ -735,6 +736,7 @@ services:
   # The Celery worker for processing all queues (dataset, workflow, mail, etc.)
   worker:
     image: langgenius/dify-api:1.11.1
+    user: root
     restart: always
     environment:
       # Use the shared environment variables.
