add archive storage and configs

--- a/api/.env.example
+++ b/api/.env.example
@@ -101,6 +101,17 @@ S3_ACCESS_KEY=your-access-key
 S3_SECRET_KEY=your-secret-key
 S3_REGION=your-region
 
+# Workflow run archive storage (S3-compatible)
+ARCHIVE_STORAGE_ENABLED=false
+ARCHIVE_STORAGE_ENDPOINT=
+ARCHIVE_STORAGE_BUCKET=
+ARCHIVE_STORAGE_ACCESS_KEY=
+ARCHIVE_STORAGE_SECRET_KEY=
+ARCHIVE_STORAGE_REGION=auto
+# Paid plan workflow run archive policy
+PAID_PLAN_WORKFLOW_RUN_ARCHIVE_RETENTION_DAYS=90
+PAID_PLAN_WORKFLOW_RUN_ARCHIVE_BATCH_SIZE=100
+
 # Azure Blob Storage configuration
 AZURE_BLOB_ACCOUNT_NAME=your-account-name
 AZURE_BLOB_ACCOUNT_KEY=your-account-key
