--- a/docker/.env.example
+++ b/docker/.env.example
@@ -447,6 +447,17 @@ S3_SECRET_KEY=
 # If set to false, the access key and secret key must be provided.
 S3_USE_AWS_MANAGED_IAM=false
 
+# Workflow run archive storage (S3-compatible)
+ARCHIVE_STORAGE_ENABLED=false
+ARCHIVE_STORAGE_ENDPOINT=
+ARCHIVE_STORAGE_BUCKET=
+ARCHIVE_STORAGE_ACCESS_KEY=
+ARCHIVE_STORAGE_SECRET_KEY=
+ARCHIVE_STORAGE_REGION=auto
+# Paid plan workflow run archive policy
+PAID_PLAN_WORKFLOW_RUN_ARCHIVE_RETENTION_DAYS=90
+PAID_PLAN_WORKFLOW_RUN_ARCHIVE_BATCH_SIZE=100
+
 # Azure Blob Configuration
 #
 AZURE_BLOB_ACCOUNT_NAME=difyai
