--- a/web/package.json
+++ b/web/package.json
@@ -203,7 +203,6 @@
     "knip": "^5.66.1",
     "lint-staged": "^15.5.2",
     "lodash": "^4.17.21",
-    "magicast": "^0.3.5",
     "nock": "^14.0.10",
     "postcss": "^8.5.6",
     "react-scan": "^0.4.3",
@@ -215,8 +214,7 @@
     "uglify-js": "^3.19.3",
     "vite": "^7.3.0",
     "vite-tsconfig-paths": "^6.0.3",
-    "vitest": "^4.0.16",
-    "vitest-localstorage-mock": "^0.1.2"
+    "vitest": "^4.0.16"
   },
   "pnpm": {
     "overrides": {
