refactor: update feature branch naming in build-push workflow

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -8,7 +8,7 @@ on:
       - "build/**"
       - "release/e-*"
       - "hotfix/**"
-      - "feature/hitl-frontend"
+      - "feat/hitl-frontend"
     tags:
       - "*"
 
