add celery schedule task

--- a/api/.env.example
+++ b/api/.env.example
@@ -111,6 +111,8 @@ ARCHIVE_STORAGE_REGION=auto
 # Paid plan workflow run archive policy
 PAID_PLAN_WORKFLOW_RUN_ARCHIVE_RETENTION_DAYS=90
 PAID_PLAN_WORKFLOW_RUN_ARCHIVE_BATCH_SIZE=100
+PAID_PLAN_WORKFLOW_RUN_ARCHIVE_TENANT_IDS=
+ENABLE_PAID_PLAN_WORKFLOW_RUN_ARCHIVE_TASK=false
 
 # Azure Blob Storage configuration
 AZURE_BLOB_ACCOUNT_NAME=your-account-name
