--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -128,8 +128,10 @@ x-shared-env: &shared-api-worker-env
   ARCHIVE_STORAGE_ACCESS_KEY: ${ARCHIVE_STORAGE_ACCESS_KEY:-}
   ARCHIVE_STORAGE_SECRET_KEY: ${ARCHIVE_STORAGE_SECRET_KEY:-}
   ARCHIVE_STORAGE_REGION: ${ARCHIVE_STORAGE_REGION:-auto}
-  PAID_PLAN_WORKFLOW_RUN_ARCHIVE_RETENTION_DAYS: ${PAID_PLAN_WORKFLOW_RUN_ARCHIVE_RETENTION_DAYS:-90}
-  PAID_PLAN_WORKFLOW_RUN_ARCHIVE_BATCH_SIZE: ${PAID_PLAN_WORKFLOW_RUN_ARCHIVE_BATCH_SIZE:-100}
+      PAID_PLAN_WORKFLOW_RUN_ARCHIVE_RETENTION_DAYS: ${PAID_PLAN_WORKFLOW_RUN_ARCHIVE_RETENTION_DAYS:-90}
+      PAID_PLAN_WORKFLOW_RUN_ARCHIVE_BATCH_SIZE: ${PAID_PLAN_WORKFLOW_RUN_ARCHIVE_BATCH_SIZE:-100}
+      PAID_PLAN_WORKFLOW_RUN_ARCHIVE_TENANT_IDS: ${PAID_PLAN_WORKFLOW_RUN_ARCHIVE_TENANT_IDS:-}
+      ENABLE_PAID_PLAN_WORKFLOW_RUN_ARCHIVE_TASK: ${ENABLE_PAID_PLAN_WORKFLOW_RUN_ARCHIVE_TASK:-false}
   AZURE_BLOB_ACCOUNT_NAME: ${AZURE_BLOB_ACCOUNT_NAME:-difyai}
   AZURE_BLOB_ACCOUNT_KEY: ${AZURE_BLOB_ACCOUNT_KEY:-difyai}
   AZURE_BLOB_CONTAINER_NAME: ${AZURE_BLOB_CONTAINER_NAME:-difyai-container}
