--- a/web/package.json
+++ b/web/package.json
@@ -138,6 +138,7 @@
     "semver": "^7.7.3",
     "sharp": "^0.33.5",
     "sortablejs": "^1.15.6",
+    "string-ts": "^2.3.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tldts": "^7.0.17",
