locale from server

--- a/web/package.json
+++ b/web/package.json
@@ -90,9 +90,9 @@
     "html-entities": "^2.6.0",
     "html-to-image": "1.11.13",
     "i18next": "^25.7.3",
-    "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
     "immer": "^11.1.0",
+    "jotai": "^2.16.1",
     "js-audio-recorder": "^1.0.7",
     "js-cookie": "^3.0.5",
     "js-yaml": "^4.1.0",
