chore: update knip deps

--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.11.2",
   "private": true,
-  "packageManager": "pnpm@10.26.2+sha512.0e308ff2005fc7410366f154f625f6631ab2b16b1d2e70238444dd6ae9d630a8482d92a451144debc492416896ed16f7b114a86ec68b8404b2443869e68ffda6",
+  "packageManager": "pnpm@10.26.2",
   "engines": {
     "node": ">=v22.11.0"
   },
@@ -204,7 +204,7 @@
     "istanbul-lib-coverage": "^3.2.2",
     "jsdom": "^27.3.0",
     "jsdom-testing-mocks": "^1.16.0",
-    "knip": "^5.66.1",
+    "knip": "^5.78.0",
     "lint-staged": "^15.5.2",
     "lodash": "^4.17.21",
     "nock": "^14.0.10",
