add LOG_OUTPUT_FORMAT to docker compose and .env

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -69,6 +69,8 @@ PYTHONIOENCODING=utf-8
 # The log level for the application.
 # Supported values are `DEBUG`, `INFO`, `WARNING`, `ERROR`, `CRITICAL`
 LOG_LEVEL=INFO
+# Log output format: text or json
+LOG_OUTPUT_FORMAT=text
 # Log file path
 LOG_FILE=/app/logs/server.log
 # Log file max size, the unit is MB
