seprate ARCHIVE_STORAGE_EXPORT_BUCKET

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -447,10 +447,11 @@ S3_SECRET_KEY=
 # If set to false, the access key and secret key must be provided.
 S3_USE_AWS_MANAGED_IAM=false
 
-# Workflow run archive storage (S3-compatible)
+# Workflow run and Conversation archive storage (S3-compatible)
 ARCHIVE_STORAGE_ENABLED=false
 ARCHIVE_STORAGE_ENDPOINT=
-ARCHIVE_STORAGE_BUCKET=
+ARCHIVE_STORAGE_ARCHIVE_BUCKET=
+ARCHIVE_STORAGE_EXPORT_BUCKET=
 ARCHIVE_STORAGE_ACCESS_KEY=
 ARCHIVE_STORAGE_SECRET_KEY=
 ARCHIVE_STORAGE_REGION=auto
