--- a/api/.env.example
+++ b/api/.env.example
@@ -101,10 +101,11 @@ S3_ACCESS_KEY=your-access-key
 S3_SECRET_KEY=your-secret-key
 S3_REGION=your-region
 
-# Workflow run archive storage (S3-compatible)
+# Workflow run and Conversation archive storage (S3-compatible)
 ARCHIVE_STORAGE_ENABLED=false
 ARCHIVE_STORAGE_ENDPOINT=
-ARCHIVE_STORAGE_BUCKET=
+ARCHIVE_STORAGE_ARCHIVE_BUCKET=
+ARCHIVE_STORAGE_EXPORT_BUCKET=
 ARCHIVE_STORAGE_ACCESS_KEY=
 ARCHIVE_STORAGE_SECRET_KEY=
 ARCHIVE_STORAGE_REGION=auto
