chore: update knip config and include in CI (#30410)

--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,7 @@
     "type-check": "tsc --noEmit",
     "type-check:tsgo": "tsgo --noEmit",
     "prepare": "cd ../ && node -e \"if (process.env.NODE_ENV !== 'production'){process.exit(1)} \" || husky ./web/.husky",
-    "gen-icons": "node ./app/components/base/icons/script.mjs",
+    "gen-icons": "node ./scripts/gen-icons.mjs && eslint --fix app/components/base/icons/src/",
     "uglify-embed": "node ./bin/uglify-embed",
     "i18n:check": "tsx ./scripts/check-i18n.js",
     "i18n:gen": "tsx ./scripts/auto-gen-i18n.js",
@@ -190,7 +190,6 @@
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-v8": "4.0.16",
     "autoprefixer": "^10.4.21",
-    "babel-loader": "^10.0.0",
     "bing-translate-api": "^4.1.0",
     "code-inspector-plugin": "1.2.9",
     "cross-env": "^10.1.0",
@@ -201,10 +200,9 @@
     "eslint-plugin-storybook": "^10.1.10",
     "eslint-plugin-tailwindcss": "^3.18.2",
     "husky": "^9.1.7",
-    "istanbul-lib-coverage": "^3.2.2",
     "jsdom": "^27.3.0",
     "jsdom-testing-mocks": "^1.16.0",
-    "knip": "^5.66.1",
+    "knip": "^5.78.0",
     "lint-staged": "^15.5.2",
     "nock": "^14.0.10",
     "postcss": "^8.5.6",
