--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -110,6 +110,11 @@ jobs:
         working-directory: ./web
         run: pnpm run type-check:tsgo
 
+      - name: Web dead code check
+        if: steps.changed-files.outputs.any_changed == 'true'
+        working-directory: ./web
+        run: pnpm run knip
+
   superlinter:
     name: SuperLinter
     runs-on: ubuntu-latest
