--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^2.31.3",
     "@amplitude/plugin-session-replay-browser": "^1.23.6",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@emoji-mart/data": "^1.2.1",
     "@floating-ui/react": "^0.26.28",
     "@formatjs/intl-localematcher": "^0.5.10",
@@ -107,7 +108,6 @@
     "mitt": "^3.0.1",
     "negotiator": "^1.0.0",
     "next": "~15.5.9",
-    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
     "pinyin-pro": "^3.27.0",
