--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -115,6 +115,11 @@ jobs:
         working-directory: ./web
         run: pnpm run knip
 
+      - name: Web build check
+        if: steps.changed-files.outputs.any_changed == 'true'
+        working-directory: ./web
+        run: pnpm run build
+
   superlinter:
     name: SuperLinter
     runs-on: ubuntu-latest
