--- a/web/package.json
+++ b/web/package.json
@@ -73,6 +73,7 @@
     "@tanstack/react-query": "^5.90.5",
     "abcjs": "^6.5.2",
     "ahooks": "^3.9.5",
+    "babel-loader": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
