--- a/web/package.json
+++ b/web/package.json
@@ -113,7 +113,7 @@
     "pinyin-pro": "^3.27.0",
     "qrcode.react": "^4.2.0",
     "qs": "^6.14.1",
-    "react": "19.2.3",
+    "react": "~19.2.3",
     "react-18-input-autosize": "^3.0.0",
     "react-dom": "~19.2.3",
     "react-easy-crop": "^5.5.3",
