--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -88,12 +88,13 @@ dependencies = [
     "httpx-sse~=0.4.0",
     "sendgrid~=6.12.3",
     "flask-restx~=1.3.0",
-    "packaging~=23.2",
+    "packaging==24.1",
     "croniter>=6.0.0",
     "weaviate-client==4.17.0",
     "apscheduler>=3.11.0",
     "weave>=0.52.16",
     "docker>=7.1.0",
+    "e2b-code-interpreter>=2.4.1",
 ]
 # Before adding new dependency, consider place it in
 # alphabet order (a-z) and suitable group.
