--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -701,7 +701,7 @@ services:
 
   # API service
   api:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/platform-service-api:1.11.2
     build: '../api/.'
     restart: always
     environment:
@@ -744,7 +744,8 @@ services:
   # worker service
   # The Celery worker for processing all queues (dataset, workflow, mail, etc.)
   worker:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/platform-service-api:1.11.2
+    build: '../api/.'
     restart: always
     environment:
       # Use the shared environment variables.
@@ -783,7 +784,8 @@ services:
   # worker_beat service
   # Celery beat for scheduling periodic tasks.
   worker_beat:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/platform-service-api:1.11.2
+    build: '../api/.'
     restart: always
     environment:
       # Use the shared environment variables.
@@ -813,7 +815,7 @@ services:
 
   # Frontend web application.
   web:
-    image: langgenius/dify-web:1.11.2
+    image: ghcr.io/acedatacloud/platform-service-web:1.11.2
     build: '../web/.'
     restart: always
     environment:
